--- a/Second.html
+++ b/Second.html
@@ -72,36 +72,26 @@
                       aria-haspopup="true" aria-expanded="false">Parent
               </button>
               <div class="dropdown-menu dropdown-menu-full-width">
-                  <a class="dropdown-item" href="add.html">Add Doctor Record</a>
-                  <a class="dropdown-item" href="list.html">List Doctor</a>
-                  <a class="dropdown-item" href="#">Update Doctor Record</a>
-                  <a class="dropdown-item" href="#">Delete Doctor Record</a>
+                  <a class="dropdown-item" href="add.html">Add parent Record</a>
+                  <a class="dropdown-item" href="list.html">List Parent</a>
+                  <a class="dropdown-item" href="#">Update parent Record</a>
+                  <a class="dropdown-item" href="#">Delete parent Record</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="#">Separated link</a>
               </div>
           </div>
           <div class="btn-group">
-            <button type="button" class="btn dropdown-toggle btn-outline-danger" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">Admin
-            </button>
-            <div class="dropdown-menu dropdown-menu-full-width">
-                <a class="dropdown-item" href="add.html">Add Doctor Record</a>
-                <a class="dropdown-item" href="list.html">List Doctor</a>
-                <a class="dropdown-item" href="#">Update Doctor Record</a>
-                <a class="dropdown-item" href="#">Delete Doctor Record</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Separated link</a>
-            </div>
+           
         </div>
         <div class="btn-group">
           <button type="button" class="btn dropdown-toggle btn-outline-info" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">Nurses
           </button>
           <div class="dropdown-menu dropdown-menu-full-width">
-              <a class="dropdown-item" href="add.html">Add Doctor Record</a>
-              <a class="dropdown-item" href="list.html">List Doctor</a>
-              <a class="dropdown-item" href="#">Update Doctor Record</a>
-              <a class="dropdown-item" href="#">Delete Doctor Record</a>
+              <a class="dropdown-item" href="add.html">Add NUrses Record</a>
+              <a class="dropdown-item" href="list.html">List Nurses</a>
+              <a class="dropdown-item" href="#">Update Nurses Record</a>
+              <a class="dropdown-item" href="#">Delete Nurses Record</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Separated link</a>
           </div>
